@@ -4,10 +4,10 @@
 -- | The application entry point
 module Ghcid(main, runGhcid) where
 
-import Control.Applicative
 import Control.Exception
 import Control.Monad.Extra
-import Data.List
+import Data.List.Extra
+import Data.Maybe
 import Data.Time.Clock
 import Data.Version
 import System.Console.CmdArgs
@@ -19,7 +19,6 @@ import System.Time.Extra
 import Paths_ghcid
 import Language.Haskell.Ghcid
 import Language.Haskell.Ghcid.Terminal
-import Language.Haskell.Ghcid.Types
 import Language.Haskell.Ghcid.Util
 
 
@@ -27,6 +26,7 @@ import Language.Haskell.Ghcid.Util
 data Options = Options
     {command :: String
     ,height :: Maybe Int
+    ,width :: Maybe Int
     ,topmost :: Bool
     }
     deriving (Data,Typeable,Show)
@@ -35,6 +35,7 @@ options :: Mode (CmdArgs Options)
 options = cmdArgsMode $ Options
     {command = "" &= typ "COMMAND" &= help "Command to run (defaults to ghci or cabal repl)"
     ,height = Nothing &= help "Number of lines to show (defaults to console height)"
+    ,width = Nothing &= help "Number of columns to show (defaults to console width)"
     ,topmost = False &= name "t" &= help "Set window topmost (Windows only)"
     } &= verbosity &=
     program "ghcid" &= summary ("Auto reloading GHCi daemon v" ++ showVersion version)
@@ -44,9 +45,14 @@ main :: IO ()
 main = do
     opts@Options{..} <- cmdArgsRun options
     when topmost terminalTopmost
-    height <- return $ case height of
-        Nothing -> maybe 8 snd <$> terminalSize
-        Just h -> return h
+    height <- return $ case (width, height) of
+        (Just w, Just h) -> return (w,h)
+        _ -> do
+            term <- terminalSize
+            let f user def sel = fromMaybe (maybe def sel term) user
+            -- if we write to the end of the window then it wraps automatically
+            -- so putStrLn width 'x' uses up two lines
+            return (f width 80 (pred . fst), f height 8 snd)
     command <- if command /= "" then return command else
                ifM (doesFileExist ".ghci") (return "ghci") (return "cabal repl")
     runGhcid command height $ \xs -> do
@@ -54,13 +60,13 @@ main = do
         hFlush stdout -- must flush, since we don't finish with a newline
 
 
-runGhcid :: String -> IO Int -> ([String] -> IO ()) -> IO ()
-runGhcid command height output = do
-    do height <- height; output $ "Loading..." : replicate (height - 1) ""
+runGhcid :: String -> IO (Int,Int) -> ([String] -> IO ()) -> IO ()
+runGhcid command size output = do
+    do (_,height) <- size; output $ "Loading..." : replicate (height - 1) ""
     (ghci,initLoad) <- startGhci command Nothing
     let fire load warnings = do
             load <- return $ filter (not . whitelist) load
-            height <- height
+            (width, height) <- size
             start <- getCurrentTime
             modsActive <- fmap (map snd) $ showModules ghci
             let modsLoad = nub $ map loadFile load
@@ -69,7 +75,8 @@ runGhcid command height output = do
                 outStrLn $ "%LOAD: " ++ show load
             let warn = [w | w <- warnings, loadFile w `elem` modsActive, loadFile w `notElem` modsLoad]
             let outFill msg = output $ take height $ msg ++ replicate height ""
-            outFill $ prettyOutput height $ filter isMessage load ++ warn
+            outFill $ prettyOutput height
+                [m{loadMessage = concatMap (chunksOfWord width (width `div` 5)) $ loadMessage m} | m@Message{} <- load ++ warn]
             reason <- awaitFiles start $ nub $ modsLoad ++ modsActive
             outFill $ "Reloading..." : map ("  " ++) reason
             load2 <- reload ghci
